fixes thumbnail overflow

--- a/assets/views/work/index.styl
+++ b/assets/views/work/index.styl
@@ -1,5 +1,7 @@
 #thumbnail-grid
   max-width 550px
+  max-height 100%
+  overflow auto
   background-color rgba(255,255,255,.5)
 
   li
